# hackday-2025-lonely-bot

./: LICENSE  README.md  pyproject.toml
chatty_bot/: __main__.py  chatty_bot.py
chatty_bot/questions/: __init__.py  q1.py  q10.py  q2.py  q3.py  q4.py  q5.py  q6.py  q7.py  q8.py  q9.py
lonely_gpt/: __main__.py  lonely_gpt.py  rockyou.py
lonely_gpt/questions/: q1.py  q10.py  q2.py  q3.py  q4.py  q5.py  q6.py  q7.py  q8.py  q9.py
