[project]
name = "chatty-bot"
version = "0.1.0"
description = "A solution implementation to the hackday.fr 2025 lonely bot challenge"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langchain (>=0.3.15,<0.4.0)",
    "langchain-openai (>=0.3.2,<0.4.0)",
    "langchain-core (>=0.3.31,<0.4.0)",
    "langchain-community (>=0.3.15,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
